--- a/.github/workflows/.workflow.yml
+++ b/.github/workflows/.workflow.yml
@@ -6,12 +6,12 @@ on:
     branches: ["main"]
 jobs:
   build:
-    runs-on: 'ubuntu-latest'
-    container: 'python:3.9-slim'
+    runs-on: ubuntu-latest
+    container: python:3.9-slim
     steps:
       - name: 'checkout',
         uses: 'actions/checkout@v3'
-        
+
       - name: 'Install dependencies'
         run: |
           python -m pip install --upgrade pip
