--- a/.github/workflows/.workflow.yml
+++ b/.github/workflows/.workflow.yml
@@ -6,12 +6,12 @@ on:
     branches: ["main"]
 jobs:
   build:
-    runs-on: ubuntu-latest
-    container: python:3.9-slim
+    runs-on: 'ubuntu-latest'
+    container: 'python:3.9-slim'
     steps:
       - name: 'checkout',
         uses: 'actions/checkout@v3'
-
+        
       - name: 'Install dependencies'
         run: |
           python -m pip install --upgrade pip
@@ -23,5 +23,5 @@ jobs:
           flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
 
       - name: 'Run unit tests with nose'
-        run: |
+        run:
           nosetests -v --with-spect --spec-color --with-coverage --cover-package=app
